force-app/main/default/objects/Payment_Status__c/Payment_Status__c.object-meta.xml
<CustomObject>
    <label>Payment Status</label>
    <pluralLabel>Payment Statuses</pluralLabel>
    <nameField>
        <label>Payment Status Name</label>
        <type>AutoNumber</type>
        <displayFormat>PS-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description
  >Manages individual payment installments for an Order.</description>
</CustomObject>