force-app/main/default/objects/Payment_Status__c/fields/Bank_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transaction_Id__c</fullName>
    <description>은행 거래 참조번호</description>
    <label>Bank Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>