force-app/main/default/objects/Payment_Status__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>납부 기일</description>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>