force-app/main/default/objects/Payment_Status__c/fields/Installment_Name__c.field-meta.xml
<CustomField>
    <fullName>Installment_Name__c</fullName>
    <label>납부 회차명</label>
    <type>Text</type>
    <length>255</length>
    <description
  >Name for the payment installment, e.g., "Order-001 - Installment 1".</description>
</CustomField>