force-app/main/default/objects/Payment_Status__c/fields/InstallmentNumber__c.field-meta.xml
<CustomField>
    <fullName>InstallmentNumber__c</fullName>
    <label>InstallmentNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>