force-app/main/default/objects/Payment_Status__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>MasterDetail</type>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Payment Statuses</relationshipLabel>
    <relationshipName>Payment_Statuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>