force-app/main/default/objects/Payment_Status__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>실제 납부 완료일</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>