force-app/main/default/objects/Payment_Status__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <label>납부 기일</label>
    <type>Date</type>
    <required>true</required>
    <description>The due date for this payment installment.</description>
</CustomField>