force-app/main/default/objects/Payment_Status__c/fields/Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period__c</fullName>
    <description>납부 기간 (예: 2024년 1분기)</description>
    <label>Payment Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>