force-app/main/default/objects/Payment_Status__c/fields/Payment_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Payment_Sequence__c</fullName>
    <description>납부 회차 번호</description>
    <label>Payment Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>