force-app/main/default/objects/Payment_Status__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>납부 상태</description>
    <label>Payment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>미납</label>
            </value>
            <value>
                <fullName>Paid</fullName>
                <label>납부완료</label>
            </value>
            <value>
                <fullName>Overdue</fullName>
                <label>연체</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>